--- a/arny-ai-backend/.env.example.txt
+++ b/arny-ai-backend/.env.example.txt
@@ -20,6 +20,7 @@ GOOGLE_REDIRECT_URI=http://localhost:8000/auth/google/callback
 OUTLOOK_CLIENT_ID=your-outlook-client-id
 OUTLOOK_CLIENT_SECRET=your-outlook-client-secret
 OUTLOOK_REDIRECT_URI=http://localhost:8000/auth/outlook/callback
+MICROSOFT_TENANT_ID=common
 
 # AWS Configuration (for local development)
 AWS_REGION=us-east-1
