--- a/arny-ai-backend/serverless.yml
+++ b/arny-ai-backend/serverless.yml
@@ -25,6 +25,7 @@ provider:
     OUTLOOK_CLIENT_ID: ${env:OUTLOOK_CLIENT_ID}
     OUTLOOK_CLIENT_SECRET: ${env:OUTLOOK_CLIENT_SECRET}
     OUTLOOK_REDIRECT_URI: ${env:OUTLOOK_REDIRECT_URI}
+    MICROSOFT_TENANT_ID: ${env:MICROSOFT_TENANT_ID, 'common'}
   
   iam:
     role:
